--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "git.ignoreLimitWarning": true,
-    "python.pythonPath": "C:\\Users\\frasep\\.conda\\envs\\r_env\\python.exe"
+    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe"
 }
