--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 terraform/azure/multitier/.terraform/providers/registry.terraform.io/hashicorp/azurerm/2.90.0/linux_amd64/terraform-provider-azurerm_v2.90.0_x5
+terraform/azure/multiserver/.terraform/providers/registry.terraform.io/hashicorp/azurerm/2.90.0/linux_amd64/terraform-provider-azurerm_v2.90.0_x5
+terraform/azure/multiserver/terraform.tfstate.backup
+terraform/azure/multiserver/terraform.tfstate
+terraform/azure/multiserver/.terraform.lock.hcl
