update terraform mpp

--- a/terraform/azure/multiserver/openldap_inventory.ini
+++ b/terraform/azure/multiserver/openldap_inventory.ini
@@ -22,17 +22,17 @@
 ## Enter your hosts definitions here!
 ## you can have one or more hosts
 #####################################################################
-deployTarget ansible_host=frasepViya35vm1.cloud.com
-cas-controller ansible_host=frasepViya35vm2.cloud.com
-cas-worker1 ansible_host=frasepViya35vm3.cloud.com
-cas-worker1 ansible_host=frasepViya35vm4.cloud.com
+node0 ansible_host=frasepViya35vm1.cloud.com
+node1 ansible_host=frasepViya35vm2.cloud.com
+node2 ansible_host=frasepViya35vm3.cloud.com
+node3 ansible_host=frasepViya35vm4.cloud.com
 
 #####################################################################
 ## This is how you tell the playbook where to install OpenLDAP SERVER
 ## there should be only one nickname in here
 #####################################################################
 [openldapserver]
-deployTarget
+node0
 
 #####################################################################
 ## This/these servers will be configured to authenticate against the openldap server
@@ -40,10 +40,10 @@ deployTarget
 ## this host group can have one or more machines in it
 #####################################################################
 [openldapclients]
-deployTarget
-cas-controller
-cas-worker1
-cas-worker1
+node0
+node1
+node2
+node3
 
 #####################################################################
 ## Don't touch the stuff below
