--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "git.ignoreLimitWarning": true,
-    "python.pythonPath": "/opt/anaconda3/bin/python"
+    "python.pythonPath": "/bin/python3"
 }
