--- a/terraform/azure/multiserver/inventory_cas_multi_machine.ini
+++ b/terraform/azure/multiserver/inventory_cas_multi_machine.ini
@@ -2,6 +2,8 @@ deployTarget ansible_host=frasepViya35vm1.cloud.com
 cas-controller ansible_host=frasepViya35vm2.cloud.com
 cas-worker1 ansible_host=frasepViya35vm3.cloud.com
 cas-worker2 ansible_host=frasepViya35vm4.cloud.com
+cas-worker3 ansible_host=frasepViya35vm5.cloud.com
+
 
 # The AdminServices host group contains services used to support administrative tasks that have transient load.
 [AdminServices]
@@ -26,6 +28,7 @@ deployTarget
 cas-controller
 cas-worker1
 cas-worker2
+cas-worker3
 
 # The ComputeServer host group contains the Compute Server that executes SAS code on behalf of the Compute Service.
 # It supports more than one host during initial deployment for both single-tenant and multi-tenant deployments.
@@ -218,6 +221,7 @@ cas-controller
 [sas_casserver_worker]
 cas-worker1
 cas-worker2
+cas-worker3
 
 # The sasdatasvrc host group contains SAS PostgreSQL.
 [sasdatasvrc]
