--- a/terraform/azure/multiserver/openldap_inventory.ini
+++ b/terraform/azure/multiserver/openldap_inventory.ini
@@ -26,6 +26,7 @@ node0 ansible_host=frasepViya35vm1.cloud.com
 node1 ansible_host=frasepViya35vm2.cloud.com
 node2 ansible_host=frasepViya35vm3.cloud.com
 node3 ansible_host=frasepViya35vm4.cloud.com
+node4 ansible_host=frasepViya35vm5.cloud.com
 
 #####################################################################
 ## This is how you tell the playbook where to install OpenLDAP SERVER
@@ -44,6 +45,7 @@ node0
 node1
 node2
 node3
+node4
 
 #####################################################################
 ## Don't touch the stuff below
