--- a/terraform/azure/multiserver/pre-install.inventory.ini
+++ b/terraform/azure/multiserver/pre-install.inventory.ini
@@ -8,6 +8,7 @@ deployTarget01 ansible_connection=local
 deployTarget02 ansible_host=frasepViya35vm2.cloud.com
 deployTarget03 ansible_host=frasepViya35vm3.cloud.com
 deployTarget04 ansible_host=frasepViya35vm4.cloud.com
+deployTarget05 ansible_host=frasepViya35vm5.cloud.com
 
 ## This line would define another (not local) machine.
 ## Note that the _user and _key parameters are not mandatory,
@@ -20,3 +21,4 @@ deployTarget01
 deployTarget02
 deployTarget03
 deployTarget04
+deployTarget05
